MMA-6096 Migrert fra junit4 til junit5 på itester.