@@ -1,18 +1,5 @@
 package no.nav.dokarkiv.rjoark100;
 
-import static junit.framework.TestCase.assertNull;
-import static junit.framework.TestCase.assertTrue;
-import static no.nav.dokarkiv.core.aksjonslogg.ArkivElementConstants.JOURNALPOST_SKJERMING_TYPE;
-import static no.nav.dokarkiv.core.aksjonslogg.ArkivElementConstants.RELASJON_SKJERMING_TYPE;
-import static no.nav.dokarkiv.core.aksjonslogg.ArkivElementConstants.fildetaljerSkjermingTypeVariant;
-import static no.nav.dokarkiv.core.util.TestDataGenerator.createFildetaljerOgFil;
-import static no.nav.dokarkiv.core.util.TestDataGenerator.createJournalpostWithGjenbruktHoveddokument;
-import static no.nav.dokarkiv.core.util.TestDataGenerator.createJournalpostWithHoveddokument;
-import static no.nav.dokarkiv.util.TestUtil.createSkjermarkivenhetRequest;
-import static org.hamcrest.MatcherAssert.assertThat;
-import static org.hamcrest.Matchers.nullValue;
-import static org.hamcrest.core.Is.is;
-
 import no.nav.dokarkiv.AbstractAdminIT;
 import no.nav.dokarkiv.core.domain.codes.AksjonsTypeCode;
 import no.nav.dokarkiv.core.domain.codes.ArkivenhetCode;
@@ -25,7 +12,7 @@ import no.nav.dokarkiv.core.domain.entities.DokumentInfo;
 import no.nav.dokarkiv.core.domain.entities.Journalpost;
 import no.nav.dokarkiv.core.util.TestDataGenerator;
 import org.apache.commons.collections15.IteratorUtils;
-import org.junit.Test;
+import org.junit.jupiter.api.Test;
 import org.springframework.http.HttpEntity;
 import org.springframework.http.HttpMethod;
 import org.springframework.http.HttpStatus;
@@ -37,6 +24,19 @@ import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
+
+import static no.nav.dokarkiv.core.aksjonslogg.ArkivElementConstants.JOURNALPOST_SKJERMING_TYPE;
+import static no.nav.dokarkiv.core.aksjonslogg.ArkivElementConstants.RELASJON_SKJERMING_TYPE;
+import static no.nav.dokarkiv.core.aksjonslogg.ArkivElementConstants.fildetaljerSkjermingTypeVariant;
+import static no.nav.dokarkiv.core.util.TestDataGenerator.createFildetaljerOgFil;
+import static no.nav.dokarkiv.core.util.TestDataGenerator.createJournalpostWithGjenbruktHoveddokument;
+import static no.nav.dokarkiv.core.util.TestDataGenerator.createJournalpostWithHoveddokument;
+import static no.nav.dokarkiv.util.TestUtil.createSkjermarkivenhetRequest;
+import static org.hamcrest.MatcherAssert.assertThat;
+import static org.hamcrest.Matchers.nullValue;
+import static org.hamcrest.core.Is.is;
+import static org.junit.jupiter.api.Assertions.assertNull;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 
 /**
  * Test for opphev skjerming av arkivenhet
@@ -59,7 +59,7 @@ public class Rjoark100bIT extends AbstractAdminIT {
 				.get()
 				.getSkjermingType(), is(SkjermingTypeCode.POL));
 
-		HttpEntity httpEntity = new HttpEntity(
+		var httpEntity = new HttpEntity<>(
 				createSkjermarkivenhetRequest(SkjermingTypeCode.POL, ArkivenhetCode.JOURNALPOST, journalpost.getJournalpostId(), null, null),
 				createHeadersWithAksjon());
 
@@ -116,7 +116,7 @@ public class Rjoark100bIT extends AbstractAdminIT {
 		ResponseEntity<String> responseEntity = restTemplate.exchange(
 				URL_SKJERMARKIVENHET,
 				HttpMethod.DELETE,
-				new HttpEntity(
+				new HttpEntity<>(
 						createSkjermarkivenhetRequest(SkjermingTypeCode.POL, ArkivenhetCode.DOKUMENT_INFO, null,
 								dokumentInfoSomErSkjermet.getDokumentInfoId(), null),
 						createHeadersWithAksjon()),
@@ -165,7 +165,7 @@ public class Rjoark100bIT extends AbstractAdminIT {
 		ResponseEntity<String> responseEntity = restTemplate.exchange(
 				URL_SKJERMARKIVENHET,
 				HttpMethod.DELETE,
-				new HttpEntity(
+				new HttpEntity<>(
 						createSkjermarkivenhetRequest(SkjermingTypeCode.POL, ArkivenhetCode.DOKUMENT_INFO, null,
 								dokumentInfoSomErSkjermet.getDokumentInfoId(), null),
 						createHeadersWithAksjon()),
@@ -224,7 +224,7 @@ public class Rjoark100bIT extends AbstractAdminIT {
 		TestTransaction.flagForCommit();
 		TestTransaction.end();
 
-		HttpEntity httpEntity = new HttpEntity(
+		var httpEntity = new HttpEntity<>(
 				createSkjermarkivenhetRequest(SkjermingTypeCode.POL, ArkivenhetCode.DOKUMENT_INFO, null,
 						dokumentInfo.getDokumentInfoId(), null),
 				createHeadersWithAksjon());
@@ -276,7 +276,7 @@ public class Rjoark100bIT extends AbstractAdminIT {
 		assertAksjonsLogg(getAksjonsLoggByJournalpostId(aksjonsLoggList, journalpost2.getJournalpostId()), AksjonsTypeCode.ENDRE_SKJERMING, journalpost2
 						.getJournalpostId(), dokumentInfo
 						.getDokumentInfoId(),
-				Arrays.asList(
+				List.of(
 						ArkivElementEndring.builder()
 								.arkivElement(RELASJON_SKJERMING_TYPE)
 								.fraVerdi(SkjermingTypeCode.POL.name())
@@ -302,7 +302,7 @@ public class Rjoark100bIT extends AbstractAdminIT {
 				.findFilDetaljerByVariantFormatAdmin(VariantFormatCode.ARKIV)
 				.getSkjermingType(), is(SkjermingTypeCode.POL));
 
-		HttpEntity httpEntity = new HttpEntity(
+		var httpEntity = new HttpEntity<>(
 				createSkjermarkivenhetRequest(SkjermingTypeCode.POL, ArkivenhetCode.DOKUMENT_FIL, null,
 						dokumentInfo.getDokumentInfoId(), VariantFormatCode.ARKIV),
 				createHeadersWithAksjon());
@@ -323,14 +323,13 @@ public class Rjoark100bIT extends AbstractAdminIT {
 
 		List<AksjonsLogg> aksjonsLoggList = IteratorUtils.toList(aksjonsLoggRepository.findAll().iterator());
 		assertThat(aksjonsLoggList.size(), is(1));
-		assertAksjonsLogg(aksjonsLoggList.get(0), AksjonsTypeCode.ENDRE_SKJERMING, journalpost.getJournalpostId(), dokumentInfo.getDokumentInfoId(), Arrays
-				.asList(
-						ArkivElementEndring.builder()
-								.arkivElement(fildetaljerSkjermingTypeVariant(VariantFormatCode.ARKIV))
-								.fraVerdi(SkjermingTypeCode.POL.name())
-								.tilVerdi(null)
-								.build()
-				));
+		assertAksjonsLogg(aksjonsLoggList.get(0), AksjonsTypeCode.ENDRE_SKJERMING, journalpost.getJournalpostId(), dokumentInfo.getDokumentInfoId(), List.of(
+				ArkivElementEndring.builder()
+						.arkivElement(fildetaljerSkjermingTypeVariant(VariantFormatCode.ARKIV))
+						.fraVerdi(SkjermingTypeCode.POL.name())
+						.tilVerdi(null)
+						.build()
+		));
 	}
 
 	@Test
@@ -343,7 +342,7 @@ public class Rjoark100bIT extends AbstractAdminIT {
 		skjermingServiceTest.setVariantSkjermet(dokumentInfo.getDokumentInfoId(), VariantFormatCode.PRODUKSJON, SkjermingTypeCode.POL);
 		reinitTransaction();
 
-		HttpEntity httpEntity = new HttpEntity(
+		var httpEntity = new HttpEntity<>(
 				createSkjermarkivenhetRequest(SkjermingTypeCode.POL, ArkivenhetCode.DOKUMENT_FIL, null,
 						dokumentInfo.getDokumentInfoId(), null),
 				createHeadersWithAksjon());
@@ -396,7 +395,7 @@ public class Rjoark100bIT extends AbstractAdminIT {
 		TestTransaction.end();
 		TestTransaction.start();
 
-		HttpEntity httpEntity = new HttpEntity(
+		var httpEntity = new HttpEntity<>(
 				createSkjermarkivenhetRequest(SkjermingTypeCode.POL, ArkivenhetCode.DOKUMENT_FIL, null,
 						dokumentInfo.getDokumentInfoId(), null),
 				createHeadersWithAksjon());
@@ -453,7 +452,7 @@ public class Rjoark100bIT extends AbstractAdminIT {
 		TestTransaction.flagForCommit();
 		TestTransaction.end();
 
-		HttpEntity httpEntity = new HttpEntity(
+		var httpEntity = new HttpEntity<>(
 				createSkjermarkivenhetRequest(SkjermingTypeCode.POL, ArkivenhetCode.DOKUMENT_INFO, null,
 						dokumentInfo.getDokumentInfoId(), null),
 				createHeadersWithAksjon());
@@ -486,7 +485,7 @@ public class Rjoark100bIT extends AbstractAdminIT {
 		TestTransaction.flagForCommit();
 		TestTransaction.end();
 
-		HttpEntity httpEntity = new HttpEntity(
+		var httpEntity = new HttpEntity<>(
 				createSkjermarkivenhetRequest(SkjermingTypeCode.POL, ArkivenhetCode.JOURNALPOST, journalpost.getJournalpostId(),
 						null, null),
 				createHeadersWithAksjon());
@@ -517,7 +516,7 @@ public class Rjoark100bIT extends AbstractAdminIT {
 		TestTransaction.flagForCommit();
 		TestTransaction.end();
 
-		HttpEntity httpEntity = new HttpEntity(
+		var httpEntity = new HttpEntity<>(
 				createSkjermarkivenhetRequest(SkjermingTypeCode.POL, ArkivenhetCode.DOKUMENT_FIL, null,
 						dokumentInfo.getDokumentInfoId(), VariantFormatCode.ARKIV),
 				createHeadersWithAksjon());
@@ -540,7 +539,7 @@ public class Rjoark100bIT extends AbstractAdminIT {
 	@Test
 	public void skalIkkeFåTilgangHvisServiceBrukerIkkeErSrvJoarkadmin() {
 
-		HttpEntity httpEntity = new HttpEntity(
+		var httpEntity = new HttpEntity<>(
 				createSkjermarkivenhetRequest(SkjermingTypeCode.POL, ArkivenhetCode.JOURNALPOST, 1L, null, null),
 				createHeadersWithServiceUserToken(NO_ACCESS_SERVICE_USER_ID));
 
